🐛 Attempt to fix next/image overlap bug

--- a/client/components/BlurImage/BlurImage.module.scss
+++ b/client/components/BlurImage/BlurImage.module.scss
@@ -5,16 +5,17 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 98%; // bug with next/image causes uncontrollable style + classNames when width and height set
     width: 100%;
+    padding: 0;
+    margin: 0;
   }
 
-  > div {
-    width: 100%;
-  }
   img {
     object-fit: cover;
-
+    height: 100%;
     width: 100%;
+    padding: 0;
+    margin: 0;
   }
 }
